--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                             <transformers>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.netcompany.Main</mainClass>
+                                    <mainClass>com.netcompany.NewMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
