--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/truongnln2/java-oop-presentation#readme",
   "workspaces": [
-    "slide-template"
+    "slide-template",
+    "slide-template/code-surfer/packs/step-parser",
+    "slide-template/code-surfer/packs/standalone"
   ],
   "dependencies": {
     "netcompany-mdx-slide": "1.0.0"
